fixed the header being too big for mobile, and fixed the link key error

--- a/src/index.css
+++ b/src/index.css
@@ -75,8 +75,8 @@ code {
 }
 
 @media only screen and (max-width: 900px) {
-  h1 {
-    font-size: 75px !important;
+  .wrapper h1 {
+    font-size: 67px !important;
   }
 
   .outside-card {
